--- a/blog-yazi-1.html
+++ b/blog-yazi-1.html
@@ -75,15 +75,26 @@
                     <p class="mt-4 text-lg text-gray-500">Yayınlanma Tarihi: 1 Ağustos 2025</p>
                     <div class="mt-8 h-96 w-full bg-cover bg-center rounded-lg shadow-lg" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuCWbLxa4eUWJscCEUewVmDbTRmBw9lnUWJTxgvyvKMUjRR3HEnYbNVzpgbqEhlyrS_wgz_09qpoH8fQdku9obfEAjK7fMpW7JLgScprEK1B-hc9mZRyBQefFljQF25JPTM9NFJvC6VAzdJKPW53SczjsWyXeywxA792dB-QtyZFGePMgeFf_wSP-burswp491pA47Jn-ct57nKmwXPyXVdN2Wfzar2k-bfgV1pa0IEqtUOX0L_zHG8l4D5n53wAYmi4lV9AYTXkx8o");' role="img" aria-label="2025 yılı trend renklerini yansıtan modern ve şık bir oda"></div>
                     <div class="mt-8 prose prose-lg max-w-none text-gray-700">
-                        <p>Bu yılın trend renkleriyle evinize modern bir dokunuş katın. 2025, doğallığın ve sakinliğin ön planda olduğu bir yıl olacak. Duvarlarınızda kullanacağınız renklerle sadece bir odayı değil, tüm yaşam alanınızın enerjisini değiştirebilirsiniz.</p>
-                        <p>İşte bu yılın öne çıkan renk paletleri:</p>
-                        <h2>1. Toprak Tonları ve Sıcak Nötrler</h2>
-                        <p>Bej, krem, terakota ve yanık turuncu gibi renkler, mekanlara sıcaklık ve samimiyet katıyor. Bu tonlar, özellikle ahşap mobilyalar ve doğal tekstillerle birleştiğinde huzurlu ve davetkar bir atmosfer yaratır. Minimalist ve bohem dekorasyon stilleri için mükemmel bir zemin oluştururlar.</p>
-                        <h2>2. Doğadan İlham Alan Yeşiller</h2>
-                        <p>Adaçayı yeşili, zeytin yeşili ve nane tonları, doğayı evinize taşımanın en zarif yollarından biri. Bu renkler, stresi azaltıcı ve sakinleştirici etkileriyle bilinir. Özellikle yatak odaları ve çalışma alanları için idealdir. Beyaz, gri ve açık ahşap renkleriyle harika bir uyum yakalarlar.</p>
-                        <h2>3. Cesur ve Derin Maviler</h2>
-                        <p>Gece mavisi ve lacivert gibi derin tonlar, mekanlara sofistike ve asil bir hava katıyor. Özellikle tek bir duvarı vurgulamak (accent wall) için kullanıldığında dramatik bir etki yaratır. Altın veya pirinç detaylarla birleştiğinde lüks bir görünüm elde edebilirsiniz.</p>
-                        <p>Unutmayın, renk seçimi kişisel bir zevktir. Ancak bu trendler, evinize yeni bir soluk getirmek için size ilham verebilir. Hangi rengin sizin için doğru olduğuna karar veremiyorsanız, profesyonel ekibimizden ücretsiz renk danışmanlığı alabilirsiniz.</p>
+                        <p>Her yeni yıl, dekorasyon dünyasında taze ve heyecan verici başlangıçlar anlamına gelir. 2025 yılı, doğaya dönüşün, sakinliğin ve kişisel ifade özgürlüğünün ön planda olduğu bir dönem olacak. Duvarlarınızda kullanacağınız renklerle sadece bir odayı değil, tüm yaşam alanınızın enerjisini ve ruhunu değiştirebilirsiniz. Gelin, bu yılın öne çıkan renk paletlerine ve bu renkleri mekanlarınıza nasıl uygulayabileceğinize birlikte göz atalım.</p>
+                        
+                        <h2>1. Toprak Tonları: Doğallığın Sıcak Kucaklaması</h2>
+                        <p>Pandemi sonrası dönemde evlerimizde aradığımız huzur ve güven duygusu, 2025'te de etkisini sürdürüyor. Bej, krem, terakota, yanık turuncu ve kil tonları gibi sıcak nötrler, mekanlara samimiyet ve topraklanma hissi katıyor. Bu renkler, özellikle ahşap mobilyalar, hasır sepetler ve keten gibi doğal tekstillerle birleştiğinde, sizi kucaklayan, huzurlu ve davetkar bir atmosfer yaratır.</p>
+                        <blockquote><strong>Uygulama İpucu:</strong> Oturma odanızda veya salonunuzda sıcak bir bej tonunu ana renk olarak kullanıp, bir duvarı terakota rengiyle vurgulayarak mekana derinlik katabilirsiniz.</blockquote>
+
+                        <h2>2. Doğadan İlham Alan Yeşiller: Sakinliğin Rengi</h2>
+                        <p>Şehrin karmaşasından uzaklaşma isteği, duvarlarımıza yansıyor. Adaçayı yeşili, zeytin yeşili, okaliptüs ve nane tonları, doğayı evinize taşımanın en zarif yollarından biri. Bilimsel olarak da kanıtlandığı üzere, yeşilin tonları stresi azaltıcı ve sakinleştirici etkilere sahiptir. Bu nedenle yatak odaları, banyolar ve çalışma alanları için idealdir.</p>
+                        <ul>
+                            <li><strong>Adaçayı Yeşili:</strong> Minimalist ve modern mekanlar için mükemmel bir seçim.</li>
+                            <li><strong>Zeytin Yeşili:</strong> Daha klasik ve rustik bir hava yaratmak için ideal.</li>
+                            <li><strong>Nane Yeşili:</strong> Enerjik ve ferah bir atmosfer için, özellikle mutfaklarda harika sonuçlar verir.</li>
+                        </ul>
+
+                        <h2>3. Cesur ve Derin Maviler: Sonsuzluğun Zarafeti</h2>
+                        <p>Gece mavisi, lacivert ve okyanus mavisi gibi derin tonlar, 2025'te de popülerliğini koruyor. Bu renkler, mekanlara sofistike, asil ve gizemli bir hava katıyor. Genellikle büyük ve aydınlık odalarda daha etkili olsalar da, doğru aydınlatma ile küçük mekanlarda bile dramatik bir etki yaratabilirler. Özellikle tek bir duvarı vurgulamak (accent wall) için kullanıldığında, odanın odak noktası haline gelirler.</p>
+                        <blockquote><strong>Uygulama İpucu:</strong> Çalışma odanızda kitaplık bulunan duvarı gece mavisine boyayarak hem derinlik algısı yaratabilir hem de odaklanmayı kolaylaştıran bir ortam oluşturabilirsiniz. Altın veya pirinç metal detaylarla kombinleyerek lüks bir görünüm elde edebilirsiniz.</blockquote>
+
+                        <h3>Renk Seçimi İçin Profesyonel Destek</h3>
+                        <p>Unutmayın, renk seçimi kişisel bir zevktir ve en önemlisi sizin kendinizi o mekanda nasıl hissettiğinizdir. Bu trendler, evinize yeni bir soluk getirmek için size ilham verebilir. Hangi rengin sizin için doğru olduğuna karar veremiyorsanız veya renklerin ışık altındaki duruşundan emin olamıyorsanız, profesyonel ekibimizden <strong>ücretsiz renk danışmanlığı</strong> alabilirsiniz. Mekanınıza en uygun renkleri birlikte seçelim!</p>
                     </div>
                 </div>
             </article>
@@ -175,5 +186,27 @@
             }, { passive: true });
         });
     </script>
-</body>
+
+        <button id="scrollTopBtn" title="Yukarı Çık" class="fixed bottom-36 right-4 z-50 hidden h-14 w-14 items-center justify-center rounded-full bg-gray-800 text-white shadow-lg transition-all duration-300 hover:bg-gray-900 hover:scale-110 focus:outline-none">
+            <span class="material-icons">arrow_upward</span>
+        </button>
+        <script>
+            document.addEventListener('DOMContentLoaded', () => {
+                const scrollTopBtn = document.getElementById('scrollTopBtn');
+                if (scrollTopBtn) {
+                    window.addEventListener('scroll', () => {
+                        if (document.body.scrollTop > 300 || document.documentElement.scrollTop > 300) {
+                            scrollTopBtn.style.display = 'flex';
+                        } else {
+                            scrollTopBtn.style.display = 'none';
+                        }
+                    }, { passive: true });
+
+                    scrollTopBtn.addEventListener('click', () => {
+                        window.scrollTo({ top: 0, behavior: 'smooth' });
+                    });
+                }
+            });
+        </script>
+    </body>
 </html>
