--- a/blog-yazi-2.html
+++ b/blog-yazi-2.html
@@ -75,22 +75,59 @@
                     <p class="mt-4 text-lg text-gray-500">Yayınlanma Tarihi: 25 Temmuz 2025</p>
                     <div class="mt-8 h-96 w-full bg-cover bg-center rounded-lg shadow-lg" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuBlowHjSZOOmamVQaj4TDVCZczKe7H-uCx1rfGK-ZvJHVIDYuVVeP4byI66btNyPT2_F0JTjqAs1xs6Nv_KNYD7LMWch0hFIlXd7kSoaNGmQZoizTT2n9R7lMTRNGgcuyJoIxEUzIwqsZuSCeU7TWgOeOZOy0i6cs8EeEemHCuXE18JsjiMDGeWtmOusZPJyqziEGPeMlh_mQMcnRuXlj_yJFEcev5UCtYtHnYEGdDXMk0RARO9gS-93sQwqX-y3PwA9sKT0c6SCgY");' role="img" aria-label="Mat ve saten boya arasındaki parlaklık farkını gösteren duvar"></div>
                     <div class="mt-8 prose prose-lg max-w-none text-gray-700">
-                        <p>Duvarlarınız için boya seçerken parlaklık seviyesi en az renk kadar önemlidir. Doğru parlaklık, hem odanın estetiğini hem de boyanın dayanıklılığını doğrudan etkiler. En yaygın iki seçenek olan mat ve saten boya arasındaki farkları ve hangisini nerede kullanmanız gerektiğini bu yazıda açıklıyoruz.</p>
-                        <h2>Mat Boya: Kusurları Gizleyen Zarafet</h2>
-                        <p>Mat boyalar, ışığı yansıtmayan, pürüzsüz ve kadifemsi bir dokuya sahiptir. Bu özellikleri sayesinde duvar yüzeyindeki küçük kusurları ve dalgalanmaları gizlemede oldukça başarılıdırlar.</p>
+                        <p>Hayalinizdeki rengi buldunuz, peki ya parlaklığı? Duvarlarınız için boya seçerken parlaklık seviyesi en az renk kadar önemlidir. Doğru parlaklık seçimi, hem odanın estetiğini ve atmosferini hem de boyanın dayanıklılığını doğrudan etkiler. Piyasada en yaygın olarak karşımıza çıkan iki seçenek olan <strong>mat ve saten boya</strong> arasındaki temel farkları ve hangisini, ne zaman tercih etmeniz gerektiğini bu yazıda tüm detaylarıyla açıklıyoruz.</p>
+                        
+                        <h2>Mat Boya: Kusurları Gizleyen Kadifemsi Zarafet</h2>
+                        <p>Mat boyalar, ışığı yansıtmayan (veya çok az yansıtan), pürüzsüz ve kadifemsi bir dokuya sahiptir. Bu özellikleri sayesinde duvar yüzeyindeki küçük sıva hatalarını, dalgalanmaları ve kusurları gizlemede oldukça başarılıdırlar. Renkleri daha zengin ve derin göstererek sofistike bir atmosfer yaratırlar.</p>
                         <ul>
-                            <li><strong>Avantajları:</strong> Kusurları iyi gizler, renkleri daha zengin ve derin gösterir, rötuş yapması daha kolaydır.</li>
-                            <li><strong>Dezavantajları:</strong> Temizlenmesi daha zordur, lekelere ve sürtünmeye karşı daha az dayanıklıdır.</li>
-                            <li><strong>Kullanım Alanları:</strong> Tavanlar, yetişkin yatak odaları ve misafir odaları gibi az kullanılan ve lekelenme riski düşük olan alanlar için idealdir.</li>
+                            <li><strong>Avantajları:</strong> Yüzey kusurlarını mükemmel şekilde gizler, renk pigmentlerini zengin gösterir, rötuş yapması daha kolaydır ve iz bırakmaz.</li>
+                            <li><strong>Dezavantajları:</strong> Gözenekli yapısı nedeniyle temizlenmesi daha zordur, lekelere ve sürtünmeye karşı daha az dayanıklıdır.</li>
+                            <li><strong>İdeal Kullanım Alanları:</strong> Tavanlar (yansıma yapmadığı için en iyi seçimdir), yetişkin yatak odaları, misafir odaları ve resmi salonlar gibi az kullanılan ve lekelenme riski düşük olan alanlar için idealdir.</li>
                         </ul>
-                        <h2>Saten Boya: Dayanıklılık ve Işıltı</h2>
-                        <p>Saten boyalar, hafif bir parlaklığa sahiptir ve ışığı mat boyaya göre daha fazla yansıtır. Bu ışıltı, mekanlara ferah ve aydınlık bir hava katar. En önemli özelliği ise dayanıklılığı ve silinebilir olmasıdır.</p>
+
+                        <h2>Saten (İpek Mat) Boya: Dayanıklılık ve Işıltı Bir Arada</h2>
+                        <p>Saten boyalar, adını saten kumaşının hafif ışıltısından alır. Yumurta kabuğu parlaklığı olarak da tanımlanabilen bu boyalar, ışığı mat boyaya göre daha fazla yansıtır. Bu ışıltı, mekanlara ferah ve aydınlık bir hava katar. Ancak en önemli özelliği, pürüzsüz yüzeyi sayesinde sunduğu dayanıklılık ve silinebilir olmasıdır.</p>
                          <ul>
-                            <li><strong>Avantajları:</strong> Silinebilir ve kolay temizlenir, neme ve lekelere karşı dayanıklıdır, uzun ömürlüdür.</li>
-                            <li><strong>Dezavantajları:</strong> Yüzey kusurlarını mat boya kadar iyi gizlemez, rötuş yapıldığında iz bırakabilir.</li>
-                            <li><strong>Kullanım Alanları:</strong> Mutfak, banyo, koridor, antre ve çocuk odaları gibi sık kullanılan, lekelenme ve nem riskinin yüksek olduğu alanlar için mükemmel bir seçimdir.</li>
+                            <li><strong>Avantajları:</strong> Silinebilir ve kolay temizlenir, neme, buhara ve lekelere karşı oldukça dayanıklıdır, uzun ömürlüdür.</li>
+                            <li><strong>Dezavantajları:</strong> Yüzey kusurlarını mat boya kadar iyi gizlemez, bu nedenle uygulama öncesi pürüzsüz bir yüzey hazırlığı gerektirir. Rötuş yapıldığında iz bırakma olasılığı daha yüksektir.</li>
+                            <li><strong>İdeal Kullanım Alanları:</strong> Mutfak, banyo, koridor, antre ve çocuk odaları gibi sık kullanılan, lekelenme ve nem riskinin yüksek olduğu, sık temizlik gerektiren alanlar için mükemmel bir seçimdir.</li>
                         </ul>
-                        <p>Sonuç olarak, seçim yaparken odanın kullanım amacını ve duvarlarınızın durumunu göz önünde bulundurmalısınız. Sakin bir zarafet için mat, hareketli ve dayanıklı alanlar için saten boyayı tercih edebilirsiniz.</p>
+
+                        <h3>Hızlı Karşılaştırma Tablosu</h3>
+                        <table class="w-full text-left border-collapse">
+                            <thead>
+                                <tr>
+                                    <th class="border-b-2 p-2">Özellik</th>
+                                    <th class="border-b-2 p-2">Mat Boya</th>
+                                    <th class="border-b-2 p-2">Saten Boya</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td class="border-b p-2"><strong>Görünüm</strong></td>
+                                    <td class="border-b p-2">Pürüzsüz, yansıma yapmaz</td>
+                                    <td class="border-b p-2">Hafif parlak, ışıltılı</td>
+                                </tr>
+                                <tr>
+                                    <td class="border-b p-2"><strong>Dayanıklılık</strong></td>
+                                    <td class="border-b p-2">Orta</td>
+                                    <td class="border-b p-2">Yüksek</td>
+                                </tr>
+                                <tr>
+                                    <td class="border-b p-2"><strong>Temizlik</strong></td>
+                                    <td class="border-b p-2">Zor</td>
+                                    <td class="border-b p-2">Kolay (Silinebilir)</td>
+                                </tr>
+                                <tr>
+                                    <td class="border-b p-2"><strong>Kusur Gizleme</strong></td>
+                                    <td class="border-b p-2">Çok İyi</td>
+                                    <td class="border-b p-2">Orta</td>
+                                </tr>
+                            </tbody>
+                        </table>
+
+                        <h3>Sonuç: Hangi Boyayı Seçmelisiniz?</h3>
+                        <p>Kararınızı verirken kendinize şu iki soruyu sorun: <strong>"Bu odayı ne sıklıkla kullanıyorum?"</strong> ve <strong>"Duvarlarım ne kadar pürüzsüz?"</strong>. Eğer sakin bir zarafet arıyorsanız ve duvarlarınızda küçük kusurlar varsa <strong>mat boya</strong>; hareketli, dayanıklı ve kolay temizlenebilir bir çözüm arıyorsanız <strong>saten boya</strong> sizin için daha doğru bir tercih olacaktır.</p>
                     </div>
                 </div>
             </article>
@@ -182,5 +219,27 @@
             }, { passive: true });
         });
     </script>
-</body>
+
+        <button id="scrollTopBtn" title="Yukarı Çık" class="fixed bottom-36 right-4 z-50 hidden h-14 w-14 items-center justify-center rounded-full bg-gray-800 text-white shadow-lg transition-all duration-300 hover:bg-gray-900 hover:scale-110 focus:outline-none">
+            <span class="material-icons">arrow_upward</span>
+        </button>
+        <script>
+            document.addEventListener('DOMContentLoaded', () => {
+                const scrollTopBtn = document.getElementById('scrollTopBtn');
+                if (scrollTopBtn) {
+                    window.addEventListener('scroll', () => {
+                        if (document.body.scrollTop > 300 || document.documentElement.scrollTop > 300) {
+                            scrollTopBtn.style.display = 'flex';
+                        } else {
+                            scrollTopBtn.style.display = 'none';
+                        }
+                    }, { passive: true });
+
+                    scrollTopBtn.addEventListener('click', () => {
+                        window.scrollTo({ top: 0, behavior: 'smooth' });
+                    });
+                }
+            });
+        </script>
+    </body>
 </html>
