--- a/dis-cephe-boyama.html
+++ b/dis-cephe-boyama.html
@@ -171,7 +171,11 @@
         </footer>
 
         <div class="fixed bottom-4 right-4 z-20 flex flex-col gap-3">
-            <a href="https://wa.me/905387410140" target="_blank" class="flex h-14 w-14 items-center justify-center rounded-full bg-green-500 text-white shadow-lg transition-transform hover:scale-110"><span class="material-icons text-3xl">whatsapp</span></a>
+            <a href="https://wa.me/905387410140" target="_blank" aria-label="WhatsApp ile yazın" class="flex h-14 w-14 items-center justify-center rounded-full bg-green-500 text-white shadow-lg transition-transform hover:scale-110">
+                <svg aria-hidden="true" viewBox="0 0 32 32" class="h-8 w-8" fill="currentColor">
+                  <path d="M19.11 17.63c-.29-.15-1.7-.84-1.96-.93-.26-.1-.45-.15-.64.15-.19.29-.73.93-.9 1.12-.17.19-.33.22-.62.08-.29-.15-1.23-.45-2.34-1.44-.86-.77-1.44-1.72-1.61-2.01-.17-.29-.02-.45.13-.6.13-.13.29-.34.43-.51.15-.17.19-.29.29-.48.1-.19.05-.36-.02-.51-.07-.15-.64-1.55-.88-2.12-.23-.56-.47-.48-.64-.48-.17 0-.36-.02-.55-.02-.19 0-.51.07-.78.36-.26.29-1 1-1 2.43 0 1.43 1.03 2.81 1.17 3 .15.19 2.03 3.11 4.91 4.35.69.3 1.23.48 1.65.62.69.22 1.32.19 1.81.12.55-.08 1.7-.69 1.94-1.36.24-.67.24-1.24.17-1.36-.07-.12-.26-.19-.55-.34zM16.02 27.5h-.01c-1.98 0-3.92-.53-5.62-1.54l-.4-.24-4.17 1.09 1.12-4.07-.26-.42a10.99 10.99 0 0 1-1.69-5.9c.01-6.08 4.96-11.03 11.05-11.03 2.95 0 5.72 1.15 7.8 3.22a10.94 10.94 0 0 1 3.24 7.79c-.01 6.09-4.96 11.04-11.04 11.04zm9.58-20.63A13.283 13.283 0 0 0 16.02 3.7c-7.31 0-13.26 5.94-13.28 13.24 0 2.33.61 4.6 1.77 6.61L3 29l5.58-1.47a13.24 13.24 0 0 0 6.45 1.67h.01c7.3 0 13.25-5.95 13.27-13.26a13.18 13.18 0 0 0-3.71-9.07z"/>
+                </svg>
+            </a>
             <a href="tel:+905387410140" class="flex h-14 w-14 items-center justify-center rounded-full bg-[var(--primary-600)] text-white shadow-lg transition-transform hover:scale-110"><span class="material-icons text-3xl">phone</span></a>
         </div>
     </div>
@@ -198,5 +202,27 @@
             }, { passive: true });
         });
     </script>
-</body>
+
+        <button id="scrollTopBtn" title="Yukarı Çık" class="fixed bottom-36 right-4 z-50 hidden h-14 w-14 items-center justify-center rounded-full bg-gray-800 text-white shadow-lg transition-all duration-300 hover:bg-gray-900 hover:scale-110 focus:outline-none">
+            <span class="material-icons">arrow_upward</span>
+        </button>
+        <script>
+            document.addEventListener('DOMContentLoaded', () => {
+                const scrollTopBtn = document.getElementById('scrollTopBtn');
+                if (scrollTopBtn) {
+                    window.addEventListener('scroll', () => {
+                        if (document.body.scrollTop > 300 || document.documentElement.scrollTop > 300) {
+                            scrollTopBtn.style.display = 'flex';
+                        } else {
+                            scrollTopBtn.style.display = 'none';
+                        }
+                    }, { passive: true });
+
+                    scrollTopBtn.addEventListener('click', () => {
+                        window.scrollTo({ top: 0, behavior: 'smooth' });
+                    });
+                }
+            });
+        </script>
+    </body>
 </html>
