--- a/iletisim.html
+++ b/iletisim.html
@@ -9,17 +9,28 @@
     <title>İletişim - İstanbul Boyacınız</title>
     <meta name="description" content="Bizimle iletişime geçin. İstanbul Boyacınız'a telefon, e-posta veya iletişim formu üzerinden ulaşarak ücretsiz keşif ve fiyat teklifi alın.">
     <link href="img/Logo.png" rel="icon" type="image/png">
-    <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
+    <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries,typography"></script>
     <style type="text/tailwindcss">
-        :root {
-            --primary-50: #fef2f2; --primary-100: #fee2e2; --primary-200: #fecaca; --primary-300: #fca5a5; --primary-400: #f87171; --primary-500: #ef4444; --primary-600: #e92933; --primary-700: #b91c1c; --primary-800: #991b1b; --primary-900: #7f1d1d; --primary-950: #450a0a;
+        @layer base {
+          :root {
+            --primary-50: #eff6ff; --primary-100: #dbeafe; --primary-200: #bfdbfe; --primary-300: #93c5fd; --primary-400: #60a5fa; --primary-500: #3b82f6; --primary-600: #2563eb; --primary-700: #1d4ed8; --primary-800: #1e40af; --primary-900: #1e3a8a; --primary-950: #172554;
             --secondary-50: #f8fafc; --secondary-100: #f1f5f9; --secondary-200: #e2e8f0; --secondary-300: #cbd5e1; --secondary-400: #94a3b8; --secondary-500: #64748b; --secondary-600: #475569; --secondary-700: #334155; --secondary-800: #1e293b; --secondary-900: #0f172a; --secondary-950: #020617;
+          }
+          body { font-family: "Lexend","Noto Sans",system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif; color: var(--secondary-800); }
         }
-        body { font-family: "Lexend", "Noto Sans", sans-serif; }
-        #mobile-menu { position: fixed; top: 0; left: 0; width: 100%; height: 100%; display: flex; flex-direction: column; justify-content: center; align-items: center; background-color: var(--secondary-900); clip-path: circle(0% at calc(100% - 44px) 54px); transition: clip-path 0.6s cubic-bezier(0.25, 1, 0.5, 1); pointer-events: none; z-index: 40; }
-        #mobile-menu.open { clip-path: circle(150% at calc(100% - 44px) 54px); pointer-events: auto; }
-        .header-sticky { position: fixed; top: 0; left: 0; right: 0; width: 100%; animation: slideDown 0.5s ease-out; box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1); }
-        @keyframes slideDown { from { transform: translateY(-100%); } to { transform: translateY(0); } }
+        #mobile-menu { position: fixed; top:0; left:0; width:100%; height:100%; display:flex; flex-direction:column; justify-content:center; align-items:center; background: radial-gradient(1200px 1200px at calc(100% - 44px) 54px, rgba(2,6,23,.98) 0%, rgba(2,6,23,.98) 60%, rgba(2,6,23,.96) 100%); clip-path: circle(0% at calc(100% - 44px) 54px); transition: clip-path .6s cubic-bezier(.25,1,.5,1); pointer-events:none; z-index:40; }
+        #mobile-menu.open { clip-path: circle(150% at calc(100% - 44px) 54px); pointer-events:auto; }
+        .header-sticky { position: fixed; top:0; left:0; right:0; width:100%; animation: slideDown .5s ease-out; backdrop-filter: saturate(180%) blur(8px); background-color: rgba(255,255,255,.85); box-shadow: 0 10px 30px rgba(2,6,23,.06); }
+        @keyframes slideDown { from { transform: translateY(-100%);} to { transform: translateY(0);} }
+
+        .btn-primary { @apply inline-flex items-center justify-center rounded-lg px-6 py-3 font-semibold text-white bg-[var(--primary-600)] shadow-lg transition-all duration-300; }
+        .btn-primary:hover { transform: translateY(-2px); box-shadow: 0 12px 24px rgba(37,99,235,.25); background: var(--primary-700); }
+        .btn-outline { @apply inline-flex items-center justify-center rounded-lg px-6 py-3 font-semibold border border-[var(--primary-200)] text-[var(--primary-700)] bg-white transition-all duration-300; }
+        .btn-outline:hover { border-color: var(--primary-300); color: var(--primary-800); box-shadow: 0 8px 20px rgba(37,99,235,.12); transform: translateY(-2px); }
+
+        .card { @apply rounded-xl bg-white shadow-sm hover:shadow-lg transition-shadow duration-300 border border-slate-100; }
+        .reveal { opacity:0; transform: translateY(16px); transition: opacity .8s cubic-bezier(.2,.8,.2,1), transform .8s cubic-bezier(.2,.8,.2,1); }
+        .reveal.show { opacity:1; transform: translateY(0); }
     </style>
 </head>
 <body class="bg-white">
@@ -68,50 +79,80 @@
         </div>
 
         <main id="main-content" class="flex-grow">
-            <section class="bg-cover bg-center py-20 md:py-32" style='background-image: linear-gradient(rgba(0, 0, 0, 0.6) 0%, rgba(0, 0, 0, 0.8) 100%), url("https://lh3.googleusercontent.com/aida-public/AB6AXuC8S17uMvD7GJ5ppggmbtW_1h7AXQh-wokMlTSJSLcqvXLwOWiRCNoGvpJ-rlCwajuixafVwh7VXfjT2J11U3beSiJYstDO3xAikmqH83d9-DjF7n5gCZB0lTLXZbQpdZdcbDbwRmQrl-i3xNh0508vBiJrrvm_7nRI6nzPvxb4IRKjQHDaiq6RtKIcwuLq6wV5X5OzyuM9UIbOARH6hWTqIQ4hHNrCfVJphPkZjSB5zcHYxMOIYwQ__RbfesH_-CKKaLN4VwCoBFA");'>
-                <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center text-white">
+            <section class="relative isolate overflow-hidden">
+              <div class="absolute inset-0 -z-10">
+                <img src="https://lh3.googleusercontent.com/aida-public/AB6AXuC8S17uMvD7GJ5ppggmbtW_1h7AXQh-wokMlTSJSLcqvXLwOWiRCNoGvpJ-rlCwajuixafVwh7VXfjT2J11U3beSiJYstDO3xAikmqH83d9-DjF7n5gCZB0lTLXZbQpdZdcbDbwRmQrl-i3xNh0508vBiJrrvm_7nRI6nzPvxb4IRKjQHDaiq6RtKIcwuLq6wV5X5OzyuM9UIbOARH6hWTqIQ4hHNrCfVJphPkZjSB5zcHYxMOIYwQ__RbfesH_-CKKaLN4VwCoBFA" alt="İletişim hero" class="h-[45vh] md:h-[55vh] w-full object-cover object-center" />
+                <div class="absolute inset-0 bg-gradient-to-b from-slate-900/50 to-slate-900/70"></div>
+              </div>
+              <div class="relative mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 text-center text-white">
+                <div class="min-h-[45vh] md:min-h-[55vh] flex items-center justify-center">
+                  <div class="max-w-3xl reveal">
                     <h1 class="text-4xl md:text-6xl font-black">Bize Ulaşın</h1>
-                    <p class="mt-4 text-lg md:text-xl font-light">Sorularınız, teklif talepleriniz veya ücretsiz keşif için buradayız.</p>
+                    <p class="mt-4 text-lg md:text-xl font-light text-slate-200">Sorularınız, teklif talepleriniz veya ücretsiz keşif için buradayız.</p>
+                    <div class="mt-8 flex items-center justify-center gap-4">
+                      <a href="#contact" class="btn-primary">İletişim Bilgilerini Gör</a>
+                      <a href="https://wa.me/905387410140" target="_blank" class="btn-outline">WhatsApp</a>
+                    </div>
+                  </div>
                 </div>
+              </div>
             </section>
 
-            <section class="py-16 sm:py-24 bg-white">
-                <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8">
-                    <div class="bg-gray-50 p-8 rounded-lg shadow-md">
-                        <h3 class="text-3xl font-bold text-gray-900 text-center">İletişim Bilgilerimiz</h3>
+            <section id="contact" class="py-20 sm:py-28 bg-white">
+                <div class="max-w-5xl mx-auto px-4 sm:px-6 lg:px-8">
+                    <div class="grid grid-cols-1 lg:grid-cols-2 gap-10">
+                      <div class="bg-gray-50 p-8 rounded-xl shadow-md reveal">
+                        <h3 class="text-3xl font-bold text-gray-900">İletişim Bilgilerimiz</h3>
                         <div class="mt-8 space-y-8 text-lg text-gray-600">
-                            <p class="flex items-center">
-                                <span class="material-icons text-red-600 text-3xl mr-4">location_on</span>
-                                <span>
-                                    <strong class="block text-gray-800">Adres:</strong>
-                                    Örnek Mah. Boya Sok. No:123, Kat:4 D:5, Kadıköy/İstanbul
-                                </span>
-                            </p>
-                            <p class="flex items-center">
-                                <span class="material-icons text-red-600 text-3xl mr-4">phone</span>
-                                <span>
-                                    <strong class="block text-gray-800">Telefon & WhatsApp:</strong>
-                                    <a href="tel:+905387410140" class="hover:text-red-600">+90 555 555 55 55</a>
-                                </span>
-                            </p>
-                            <p class="flex items-center">
-                                <span class="material-icons text-red-600 text-3xl mr-4">email</span>
-                                <span>
-                                    <strong class="block text-gray-800">E-posta:</strong>
-                                    <a href="mailto:info@istanbulboyaciniz.com" class="hover:text-red-600">info@istanbulboyaciniz.com</a>
-                                </span>
-                            </p>
-                             <p class="flex items-center">
-                                <span class="material-icons text-red-600 text-3xl mr-4">schedule</span>
-                                <span>
-                                    <strong class="block text-gray-800">Çalışma Saatleri:</strong>
-                                    Haftanın 7 Günü, 08:00 - 22:00 arası hizmetinizdeyiz.
-                                </span>
-                            </p>
+                          <p class="flex items-start">
+                            <span class="material-icons text-[var(--primary-600)] text-3xl mr-4">location_on</span>
+                            <span><strong class="block text-gray-800">Adres:</strong> Örnek Mah. Boya Sok. No:123, Kat:4 D:5, Kadıköy/İstanbul</span>
+                          </p>
+                          <p class="flex items-start">
+                            <span class="material-icons text-[var(--primary-600)] text-3xl mr-4">phone</span>
+                            <span><strong class="block text-gray-800">Telefon & WhatsApp:</strong> <a href="tel:+905387410140" class="hover:text-[var(--primary-700)]">+90 538 741 01 40</a></span>
+                          </p>
+                          <p class="flex items-start">
+                            <span class="material-icons text-[var(--primary-600)] text-3xl mr-4">email</span>
+                            <span><strong class="block text-gray-800">E-posta:</strong> <a href="mailto:info@istanbulboyaciniz.com" class="hover:text-[var(--primary-700)]">info@istanbulboyaciniz.com</a></span>
+                          </p>
+                          <p class="flex items-start">
+                            <span class="material-icons text-[var(--primary-600)] text-3xl mr-4">schedule</span>
+                            <span><strong class="block text-gray-800">Çalışma Saatleri:</strong> Haftanın 7 Günü, 08:00 - 22:00</span>
+                          </p>
                         </div>
-                        <div class="mt-8 h-80 w-full bg-gray-300 rounded-lg overflow-hidden">
-                           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3010.752694834514!2d29.02250407668913!3d41.00823797135033!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14cab9e898a1c1a7%3A0x4c0f73b28d4b1f5!2s%C4%B0stanbul!5e0!3m2!1str!2str!4v1722268901698!5m2!1str!2str" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        <div class="mt-8 h-64 sm:h-80 w-full bg-gray-200 rounded-lg overflow-hidden">
+                          <iframe src="https://maps.google.com/maps?q=Kadıköy,%20İstanbul&t=&z=13&ie=UTF8&iwloc=&output=embed" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </div>
+                      </div>
+
+                      <!-- Form kaldırıldı: direkt aksiyon kartları -->
+                      <div class="bg-white p-8 rounded-xl border border-slate-200 shadow-sm reveal">
+                        <h3 class="text-2xl font-bold text-gray-900">Hızlı İletişim</h3>
+                        <p class="mt-2 text-gray-600">Form yerine doğrudan arayabilir ya da WhatsApp üzerinden yazabilirsiniz.</p>
+                        <div class="mt-8 grid grid-cols-1 sm:grid-cols-2 gap-4">
+                          <a href="tel:+905387410140" class="group flex items-center justify-between rounded-xl border border-slate-200 bg-white p-5 hover:border-[var(--primary-300)] hover:shadow-md transition-all">
+                            <div class="flex items-center gap-4">
+                              <span class="material-icons text-[var(--primary-600)] text-3xl">phone</span>
+                              <div>
+                                <p class="text-sm text-slate-500">Telefon</p>
+                                <p class="font-semibold text-slate-800">+90 538 741 01 40</p>
+                              </div>
+                            </div>
+                            <span class="material-icons text-slate-400 group-hover:text-[var(--primary-600)]">arrow_forward</span>
+                          </a>
+                          <a href="https://wa.me/905387410140" target="_blank" class="group flex items-center justify-between rounded-xl border border-slate-200 bg-white p-5 hover:border-[var(--primary-300)] hover:shadow-md transition-all">
+                            <div class="flex items-center gap-4">
+                              <span class="material-icons text-[var(--primary-600)] text-3xl">chat</span>
+                              <div>
+                                <p class="text-sm text-slate-500">WhatsApp</p>
+                                <p class="font-semibold text-slate-800">Hemen Yazın</p>
+                              </div>
+                            </div>
+                            <span class="material-icons text-slate-400 group-hover:text-[var(--primary-600)]">arrow_forward</span>
+                          </a>
+                        </div>
+                      </div>
                     </div>
                 </div>
             </section>
@@ -176,8 +217,14 @@
         </footer>
 
         <div class="fixed bottom-4 right-4 z-20 flex flex-col gap-3">
-            <a href="https://wa.me/905387410140" target="_blank" class="flex h-14 w-14 items-center justify-center rounded-full bg-green-500 text-white shadow-lg transition-transform hover:scale-110"><span class="material-icons text-3xl">whatsapp</span></a>
-            <a href="tel:+905387410140" class="flex h-14 w-14 items-center justify-center rounded-full bg-[var(--primary-600)] text-white shadow-lg transition-transform hover:scale-110"><span class="material-icons text-3xl">phone</span></a>
+            <a href="https://wa.me/905387410140" target="_blank" aria-label="WhatsApp ile yazın" class="flex h-14 w-14 items-center justify-center rounded-full bg-green-500 text-white shadow-lg transition-transform hover:scale-110">
+                <svg aria-hidden="true" viewBox="0 0 32 32" class="h-8 w-8" fill="currentColor">
+                  <path d="M19.11 17.63c-.29-.15-1.7-.84-1.96-.93-.26-.1-.45-.15-.64.15-.19.29-.73.93-.9 1.12-.17.19-.33.22-.62.08-.29-.15-1.23-.45-2.34-1.44-.86-.77-1.44-1.72-1.61-2.01-.17-.29-.02-.45.13-.6.13-.13.29-.34.43-.51.15-.17.19-.29.29-.48.1-.19.05-.36-.02-.51-.07-.15-.64-1.55-.88-2.12-.23-.56-.47-.48-.64-.48-.17 0-.36-.02-.55-.02-.19 0-.51.07-.78.36-.26.29-1 1-1 2.43 0 1.43 1.03 2.81 1.17 3 .15.19 2.03 3.11 4.91 4.35.69.3 1.23.48 1.65.62.69.22 1.32.19 1.81.12.55-.08 1.7-.69 1.94-1.36.24-.67.24-1.24.17-1.36-.07-.12-.26-.19-.55-.34zM16.02 27.5h-.01c-1.98 0-3.92-.53-5.62-1.54l-.4-.24-4.17 1.09 1.12-4.07-.26-.42a10.99 10.99 0 0 1-1.69-5.9c.01-6.08 4.96-11.03 11.05-11.03 2.95 0 5.72 1.15 7.8 3.22a10.94 10.94 0 0 1 3.24 7.79c-.01 6.09-4.96 11.04-11.04 11.04zm9.58-20.63A13.283 13.283 0 0 0 16.02 3.7c-7.31 0-13.26 5.94-13.28 13.24 0 2.33.61 4.6 1.77 6.61L3 29l5.58-1.47a13.24 13.24 0 0 0 6.45 1.67h.01c7.3 0 13.25-5.95 13.27-13.26a13.18 13.18 0 0 0-3.71-9.07z"/>
+                </svg>
+            </a>
+            <a href="tel:+905387410140" class="flex h-14 w-14 items-center justify-center rounded-full bg-[var(--primary-600)] text-white shadow-lg transition-transform hover:scale-110">
+                <span class="material-icons text-3xl">phone</span>
+            </a>
         </div>
     </div>
 
@@ -201,7 +248,40 @@
                 if (window.scrollY > 50) { if (!header.classList.contains('header-sticky')) { headerHeight = header.offsetHeight; mainContent.style.paddingTop = `${headerHeight}px`; header.classList.add('header-sticky'); } }
                 else { if (header.classList.contains('header-sticky')) { header.classList.remove('header-sticky'); mainContent.style.paddingTop = '0'; } }
             }, { passive: true });
+
+            // Scroll reveal
+            const observer = new IntersectionObserver((entries) => {
+                entries.forEach(entry => {
+                    if (entry.isIntersecting) {
+                        entry.target.classList.add('show');
+                        observer.unobserve(entry.target);
+                    }
+                });
+            }, { threshold: 0.15, rootMargin: "0px 0px -10% 0px" });
+            document.querySelectorAll('.reveal').forEach(el => observer.observe(el));
         });
     </script>
-</body>
+
+        <button id="scrollTopBtn" title="Yukarı Çık" class="fixed bottom-36 right-4 z-50 hidden h-14 w-14 items-center justify-center rounded-full bg-gray-800 text-white shadow-lg transition-all duration-300 hover:bg-gray-900 hover:scale-110 focus:outline-none">
+            <span class="material-icons">arrow_upward</span>
+        </button>
+        <script>
+            document.addEventListener('DOMContentLoaded', () => {
+                const scrollTopBtn = document.getElementById('scrollTopBtn');
+                if (scrollTopBtn) {
+                    window.addEventListener('scroll', () => {
+                        if (document.body.scrollTop > 300 || document.documentElement.scrollTop > 300) {
+                            scrollTopBtn.style.display = 'flex';
+                        } else {
+                            scrollTopBtn.style.display = 'none';
+                        }
+                    }, { passive: true });
+
+                    scrollTopBtn.addEventListener('click', () => {
+                        window.scrollTo({ top: 0, behavior: 'smooth' });
+                    });
+                }
+            });
+        </script>
+    </body>
 </html>
